zeit.content.author changes
===========================

0.4.1 (unreleased)
------------------

- Remove the last author from freetext when the last author is removed from
  referenced authors (#9918).


0.4.0 (2011-11-13)
------------------

- Fix equality/comparison for authors (#9391).


0.3.0 (2011-06-20)
------------------

- Added ``vgwortcode`` (#9198)


0.2.1 (2011-06-07)
------------------

- Fix brown-bag 0.2.0: ZCML files were missing


0.2.0 (2011-06-02)
------------------

- Fix rendering of a folder listing with authors in it (#8763).
- Add fields ``email`` and ``status`` (#8953).


0.1.1 (2010-08-09)
------------------

- Fix tests after product config changes in zeit.cms (#7549).


0.1.0 (2010-06-09)
------------------

* first release