@@ -35,6 +35,9 @@ class Author(zeit.cms.content.xmlsupport.XMLContentBase):
     entered_display_name = zeit.cms.content.property.ObjectPathProperty(
         '.entered_display_name')
 
+    community_profile = zeit.cms.content.property.ObjectPathProperty(
+        '.communityprofile')
+
     status = zeit.cms.content.property.ObjectPathProperty('.status')
 
     @property
